# Pieck

./: .gitignore  CMakeLists.txt  Error.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  TODO
include/: Lexer.h  Parser.h
src/: Lexer.cpp  Parser.cpp
tests/: code.pieck  test.cc
unittests/: CMakeLists.txt  testParser.cpp
unittests/codes/: code_1.pieck  code_2.pieck
